# hashwarp

./: .bumpversion.cfg  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  circle.yml
cmake/: EthCompilerSettings.cmake
cmake/Hunter/: config.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  POOL_EXAMPLES_ETH.md
ethminer/: main.cpp
hashwarp/: CMakeLists.txt  hashwarp.rc  main.cpp
libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libdevcore/: CommonData.cpp  CommonData.h
libethash-cl/: CMakeLists.txt
libethash-cpu/: CMakeLists.txt  CPUMiner.cpp
libethash-cuda/: CMakeLists.txt
libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  XHashAux.cpp  XHashAux.h
libhwmon/: CMakeLists.txt
libparallaxcore/: CMakeLists.txt  Farm.cpp  Farm.h  Miner.h
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h
libpoolprotocols/getwork/: EthGetworkClient.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
libxhash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libxhash-cl/kernels/: Makefile  README.md
libxhash-cl/kernels/cl/: xhash.cl
libxhash-cl/kernels/isa/: GCN3_xhash_search.isa  GCN5_xhash_search.isa  GCN_xhash.isa
libxhash-cpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h
libxhash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  dagger_shuffled.cuh  fnv.cuh  keccak.cuh  xhash_cuda_miner_kernel.cu  xhash_cuda_miner_kernel.h
scripts/: README.txt  fix-opencl-icd.vbs  testpools.bash
